<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyHotix Housekeeping</string>
    <string name="splash">My Hotix Housekeeping</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="cnx">Connexion</string>
    <string name="room_rack">Room Rack</string>
    <string name="team">Femmes de ménage</string>
    <string name="objets">Objets trouvés</string>
    <string name="clientsA">Arrivée(s) prévue(s)</string>
    <string name="exit">Quitter</string>
    <string name="maintenance">Pannes</string>
    <string name="load">Chargement</string>
    <string name="guests">Clients</string>
    <string name="login">Login</string>
    <string name="passwd">Mot de passe</string>
    <string name="ip_serv">Adresse IP du serveur</string>
    <string name="close_app">Voulez-vous vraiment quitter ?</string>
    <string name="oui">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="connect_data">Champ requis !</string>
    <string name="acces_denied">Problème de connexion</string>
    <string name="msg_acces_denied">Vous ne disposez pas de connexion Internet.</string>
    <string name="verify_data">Vérifiez les informations que vous avez entré.</string>
    <string name="new_cnx">Voulez-vous réessayer la connexion ?</string>
    <string name="legend">Légende</string>
    <string name="choix_chb">Choisissez une option</string>
    <string name="switch_state">Changer état</string>
    <string name="panne">Réclamer panne</string>
    <string name="take_photo">Prendre photo</string>
    <string name="menu_etat">Changer état</string>
    <string name="error_change_status">Echec de changement d\'état de la chambre.</string>
    <string name="succes_change_status">Etat de chambre changé avec succès.</string>
    <string name="succes_panne">Réclamation de panne envoyée avec succès.</string>
    <string name="error_panne">Erreur d\'envoi de réclamation de panne.</string>
    <string name="panne_h1">Lieu</string>
    <string name="panne_h2">Type hors service</string>
    <string name="panne_h3">Déclarée par</string>
    <string name="panne_h4">Description</string>
    <string name="tab1">Déclarer</string>
    <string name="tab2">Objets trouvés</string>
    <string name="tab3">Déclarer</string>
    <string name="tab4">Liste Pannes</string>
    <string name="update">Mise à jour</string>
    <string name="cloture">Clôturer</string>
    <string name="declare_ok">Déclaration d\'objet trouvé envoyée avec succès.</string>
    <string name="daclare_not_ok">Erreur d\'envoi de déclaration d\'objet trouvé.</string>
    <string name="update_ok">Mise à jour d\'objet trouvé avec succès.</string>
    <string name="update_not_ok">Erreur d\'envoi de mise à jour d\'objet trouvé.</string>
    <string name="cloture_ok">Clôture d\'objet trouvé avec succès.</string>
    <string name="cloture_not_ok">Erreur de Clôture d\'objet trouvé.</string>
    <string name="comment">Commentaire</string>
    <string name="duree_trait">Durée Traitement :   </string>
    <string name="hour">   Heure(s)</string>
    <string name="urgent">Urgent</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="desc_panne">Description</string>
    <string name="recalmer">Réclamer</string>
    <string name="trouve">Trouvé par</string>
    <string name="rendu">Rendu à</string>
    <string name="listeCP">Voir liste clients</string>
    <string name="refresh">Actualiser</string>
    <string name="totalAP">Total arrivées prévues</string>
    <string name="dateDeb">"Date Début : "</string>
    <string name="dateFin">Date Fin :</string>
    <string name="valider">Valider</string>
    <string name="chambre">Chambre</string>
    <string name="etatVC">Libre propre</string>
    <string name="etatVD">Libre sale</string>
    <string name="etatOC">Occupée propre</string>
    <string name="etatOD">Occupée sale</string>
    <string name="etatHS">Hors service</string>
    <string name="listeFM">Liste des femmes \n de ménage</string>
    <string name="reessayer">Réessayer</string>
    <string name="etat_encours">En cours</string>
    <string name="etat_ecloturer">Clôturée</string>
    <string name="foundBy">Trouvé par</string>
    <string name="renduA">Rendu à</string>
    <string name="declarer">Déclarer</string>
    <string name="updating">Téléchargement ..</string>
    <string name="choix_tech">Choississez le technicien</string>
    <string-array name="nav_drawer_items">
        <item>Paramètres</item>
        <item>Version</item>
        <item>Quitter</item>
    </string-array>
    <string name="version">Version</string>
    <string name="pas_pannes">Pas de Pannes ! </string>
    <string name="pas_ob">Pas d\'Objets Trouvés !</string>
    <string name="creer">Créer</string>
    <array name="nav_drawer_icons">
        <item>@drawable/setting</item>
        <item>@drawable/info_legende</item>
        <item>@drawable/log_out</item>
    </array>
    <string name="last_version_ok">Vous avez la dernière version. L\'application est à jour</string>
    <string name="last_version_no">Vous n\'avez  pas la dernière version. Cliquer sur "OK" pour la mettre à jour</string>
    <string name="show">Affiché</string>
    <string name="hide">Caché</string>
    <string name="image">Image</string>
    <string name="view">Afficher</string>
    <string name="close">Fermer</string>
    <string name="image_saved">Image enregistrée</string>
    <string name="image_saved_not">Image non enregistrée</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_dash_gouvernante">Accueil</string>
    <string name="title_activity_room_rack">Room Rack</string>
    <string name="title_activity_declaration_panne">Déclaration Panne</string>
    <string name="title_activity_objets_trouves">Liste des Objets Trouvés</string>
    <string name="title_activity_update_objet_trouve">Mise à jour Objet Trouvé</string>
    <string name="title_activity_femme_menage">Affectation femmes de ménage</string>
    <string name="title_activity_liste_clients_ap">Liste d\'arrivées prévues</string>
    <string name="title_activity_list_pannes">Liste des Pannes</string>
    <string name="title_activity_view_panne">Détails Panne</string>
    <string name="title_activity_view_objet">Détails Objet Trouvé</string>
    <string name="title_activity_prevision">Taux Occupation Prévisionnel</string>
    <string name="title_activity_mouchard">Mouchard Etat Chambres</string>
    <string name="libreP">Libre Propre</string>
    <string name="libreS">Libre Sale</string>
    <string name="OccP">Occupé Propre</string>
    <string name="OccS">Occupé Sale</string>
    <string name="Dep">Départ Attendu</string>
    <string name="DayUse">Day Use</string>
    <string name="att">Attribuée</string>
    <string name="hs">Hors Service</string>
    <string name="error">Erreur</string>
    <string name="msg_loading">Chargement ...</string>
    <string name="msg_connecting">Connexion ...</string>
    <string name="msg_change_etat_error">Impossible d\'effectuer ce changement .</string>
    <string name="msg_change_etat_error_srv">Erreur de changement du statut !</string>
    <string name="msg_change_etat_cannot">Changement d\'état non autorisé.</string>
    <string name="OK">OK </string>
    <string name="nom_prenom">Nom et Prénom</string>
    <string name="msg_connecting_not_authorised">Utilisateur Non autorisé</string>
    <string name="msg_connecting_wrong_pwd">Mot de passe erronée</string>
    <string name="msg_connecting_not_found">Utilisateur inexistant</string>
    <string name="msg_connecting_not_active">Utilisateur inactif</string>
    <string name="msg_connecting_expired_pwd">Mot de passe expiré</string>
    <string name="msg_connecting_error">Erreur de connexion</string>
    <string name="msg_connecting_error_srv">Erreur de connexion au Serveur !</string>
    <string name="msg_loading_error">Erreur de chargement des données !</string>
    <string name="msg_panne_create_ok">Panne crée avec succès </string>
    <string name="msg_panne_create_error">Problème de création de la panne !</string>
    <string name="msg_panne_cloture_ok">Panne clôturée avec succès </string>
    <string name="msg_panne_cloture_error">Problème de clôture de la panne ! </string>
    <string name="msg_objet_create_ok">Objet crée avec succès </string>
    <string name="msg_objet_create_error">Problème de crétation du l\'objet ! </string>
    <string name="msg_objet_cloture_ok">Objet clôturé avec succès </string>
    <string name="msg_objet_cloture_error">Problème de clôture du l\'objet ! </string>
    <string name="comment_requis">Veuillez écrire un commentaire.</string>
    <string name="prev_arrivee">Arrivées</string>
    <string name="prev_depart">Départs</string>
    <string name="prev_recouche">Recouche</string>
    <string name="prev_taux">Taux Occupation Chb</string>
    <string name="prev_taux_lit">Taux Occupation Lit(s)</string>
    <string name="prev_reste">Reste</string>
    <string name="msg_error_date">Dates erronées ! Vérifier l\'intervalle</string>
    <string name="msg_srv_configuration">Serveur non configuré ! </string>
    <string name="configurer">Configurer</string>
    <string name="msg_empty_affect">La liste des chambres à affecter est vide.</string>
    <string name="msg_affect_ok">Affectation avec succès </string>
    <string name="msg_affect_ko">Problème d\'Affectation !</string>
    <string name="autoupdate">Update Automatique</string>
    <string name="all">Tous</string>
    <string name="see_guests">Voir Clients</string>
    <string name="etat_lieu">État de lieu</string>
    <string name="etat_lieu_tv">État TV</string>
    <string name="etat_lieu_bar">État Mini-Bar</string>
    <string name="etat_lieu_serv">État Serviettes</string>
    <string name="etat_lieu_ok">Valide</string>
    <string name="etat_lieu_ko">Non Valide</string>
    <string name="etat_lieu_update_ok">Opération réussis !</string>
    <string name="etat_lieu_update_ko">Opération échoué !</string>
    <string name="pas_mouchard">Pas d\'Événements! </string>
    <string name="forecasts">Prévisionnel</string>
    <string name="date">Date</string>
    <string name="capactite">Capacité</string>
    <string name="chb">Chb</string>
    <string name="pax">Pax</string>
    <string name="taux_occ">Taux Occupation</string>
    <string name="total">Total</string>
    <string name="cloture_par">Clôturé par</string>
    <string name="lit">Lit(s)</string>
    <string name="title_activity_settings">Configuration</string>
    <string name="place">Lieu</string>
    <string name="has_config">Configuration</string>
    <string name="has_fm">Femmes de ménage</string>
    <string name="has_add_panne">Déclarer Panne</string>
    <string name="has_close_panne">Clôture Panne</string>
    <string name="has_add_objet">Déclarer Objet trouvé</string>
    <string name="has_close_objet">Clôture Objet trouvé</string>
    <string name="has_mouchard_room">Voir Mouchard Etat Chambres</string>
    <string name="has_change_statut">Changer État Chambre</string>
    <string name="has_etat_lieu">Changer Etat Lieu</string>
    <string name="has_view_client">Voir Clients</string>
</resources>
