<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_weight="0.37"
        android:background="#ff1271"
        android:gravity="center">

        <TextView
            android:id="@+id/chb_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chambre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_weight="0.37"
        android:background="#07bfca"
        android:gravity="center">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menu_etat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/vac_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/etatVC" />

        <RadioButton
            android:id="@+id/vac_dirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etatVD" />

        <RadioButton
            android:id="@+id/occ_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etatOC" />

        <RadioButton
            android:id="@+id/occ_dirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etatOD" />

        <RadioButton
            android:id="@+id/out_of_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etatHS" />
    </RadioGroup>

</LinearLayout>