<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back_obj_trouve"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinnerUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/back_obj_trouve"
            android:orientation="vertical">


            <Switch
                android:id="@+id/hasconfig"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_config" />

            <Switch
                android:id="@+id/hasfm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_fm" />

            <Switch
                android:id="@+id/hasaddpanne"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_add_panne" />

            <Switch
                android:id="@+id/hasclosepanne"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_close_panne" />

            <Switch
                android:id="@+id/hasaddobjet"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_add_objet" />

            <Switch
                android:id="@+id/hascloseobjet"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_close_objet" />

            <Switch
                android:id="@+id/has_mouchard_room"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_mouchard_room" />

            <Switch
                android:id="@+id/has_change_statut"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_change_statut" />

            <Switch
                android:id="@+id/has_etat_lieu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_etat_lieu" />

            <Switch
                android:id="@+id/has_view_client"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/has_view_client" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_reclamer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_btn_drawable"
                android:drawableLeft="@drawable/upload"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/valider"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>