<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_weight="0.37"
        android:background="@color/colorPrimaryHeader"
        android:gravity="center">

        <TextView
            android:id="@+id/chb_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chambre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_weight="0.37"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choix_chb"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGM"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.37">

            <RadioButton
                android:id="@+id/radioCViewGuests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/see_guests" />

            <RadioButton
                android:id="@+id/radioEtat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/switch_state" />

            <RadioButton
                android:id="@+id/radioComplaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panne" />

            <RadioButton
                android:id="@+id/radioEtatLieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etat_lieu" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>