<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_dash"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <Button
            android:id="@+id/btn_rack"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="1"
            android:drawableTop="@drawable/rack_room"

            android:text="@string/room_rack" />

        <Button
            android:id="@+id/team_manage"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/femme_menage"

            android:text="@string/team" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <Button
            android:id="@+id/objTrouves"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/objet_trouv"

            android:text="@string/objets" />

        <Button
            android:id="@+id/clientAr"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/arrivee_prev"

            android:text="@string/clientsA" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false">

        <Button
            android:id="@+id/maintenance"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_maintenance"

            android:text="@string/maintenance" />

        <Button
            android:id="@+id/maintenance2"
            style="@style/HomeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="" />


    </LinearLayout>
</LinearLayout>